Phase out java.util collection classes in nearly all places